# RealTimeGarbageCollector

./: .gitignore  CMakeLists.txt  Gc.h  GcStats.cpp  GcStats.h  LICENSE  README.md  dependentArray.h  encoding.cpp  encoding.h  exponentArray.h  garbageCollector.cpp  garbageCollector.h  gcPtr.cpp  gcPtr.h  heapItem.cpp  heapItem.h  main.cpp  tests.cpp  tests.h
allocator/: addressRange.cpp  addressRange.h  allocator.cpp  allocator.h  freeList.cpp  freeList.h  gcAllocator.cpp  gcAllocator.h  gcIndex.cpp  gcIndex.h  memoryChunk.cpp  memoryChunk.h  objectSize.h
